--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -14,40 +14,50 @@
 \includegraphics[width=0.9\textwidth]{fig_satellite_data.png}\\
 {\large{\textbf{B}}}\\
 \includegraphics[width=0.4\textwidth]{fig_usc_18.png}\\
-Figure 1 \textit{(A) Radiation of Sun from 2000 to 2013 recorded by ''ACRIM'' satellite; left - fitting of outbreaks to approximated periods. (B) Extracts form satellite data records deposited in Univ. of South Carolina site, radiation of Sun in 2018. Labels on axes - Higuchi fractal dimension of time-dependent distributions, in both charts.}
+Figure 1 \textit{(A) Radiation of Sun from 2000 to 2013 recorded by ''ACRIM'' satellite; left - fitting of outbreaks to approximated periods. (B) Extracts form satellite data records deposited in Univ. of South Carolina site, radiation of Sun in 2018. Labels on axes - Higuchi fractal dimension of time-dependent distributions, in both charts. Axes in bottom - positions of detected outbreaks and peaks of approximating log-periodic dependency.}
 
 \includegraphics[width=0.9\textwidth]{fig_sun_video.png}\\
 Figure 2 \textit{Snapshot from video record of sun flaming 15.06.2002, deposited by Swedish physicists. Digits in column - Higuchi fractal dimension for spatial axis, digits in row - approximation of fractal dimension for time axis. }
 
 \section*{Methods}
 
-\includegraphics[width=0.9\textwidth]{fig_methods.png}\\
+\includegraphics[width=0.99\textwidth]{fig_methods.png}\\
 
 Figure 3 \textit{Illustration of attempts to guess a presence of the log-periodic dependency.}
 
-\begin{tabular}{cccc}
+\begin{tabular}{cccccc}
 \hline
- & & Sum of hypotenuses & Sum of fitting lines \\
+ & & test 1 & & test 2 & \\
+ & & method 1 & method 2 & & \\
 \hline
- plain& dimension & 0.577973 & 0.579382 \\
- & correlation & -0.983925 & -0.969044 \\
+ plain& dimension & 0.577973 & 0.579382 & 0.49923 & 0.519842 \\
+ & correlation & -0.983925 & -0.969044 & -0.947012 & -0.925539 \\
 \hline
-fit in full & direction& decceleration & decceleration \\
-    & critical time& -711 &-141 \\
-    & dimension & 0.686096 & 0.880372 \\
-    & correlation & -0.992609 & -0.996231 \\
+fit in full & direction& decceleration & decceleration & & \\
+    & critical time & -711 & -141 & & \\
+    & dimension & 0.686096 & 0.880372 & & \\
+    & correlation & -0.992609 & -0.996231 & & \\
 \hline
-fit in part & direction & acceleration & decceleration \\
-    & critical time &+2 &-141 \\
-    & dimension & 0.677549 & 0.949008 \\
-    & correlation & -0.992127 & 0.996914 \\
+fit in part & direction & acceleration & decceleration & & \\
+    & critical time &+2 &-141 & & \\
+    & dimension & 0.677549 & 0.949008 & & \\
+    & correlation & -0.992127 & 0.996914 & &\\
 \hline
 \end{tabular}
 
 \section*{Results}
 
 \includegraphics[width=0.92\textwidth]{fig_tsi.png}\\
-Figure 3 \textit{Radiation of Sun in period from November 1978 to September 2017; in bottom - radiation at Mg frequency (data from personal communications). }
+\vskip 24pt
+Figure 4 \textit{Radiation of Sun in period from November 1978 to September 2017; in bottom - radiation at Mg frequency. }
+
+\newpage
+{\large{\textbf{A}}}\\
+\includegraphics[width=0.99\textwidth]{fig_baikal_longseries.png}\\
+\vskip 24pt
+{\large{\textbf{B}}}\\
+\includegraphics[width=0.6\textwidth]{fig_baikal_shortseries.png}\\
+Figure 5 \textit{Temperature of water in Baikal (A) series from May 2010 to October 2016; (B) series from May 2017 to September 2018. }
 
 \section*{References}
 
