--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -39,21 +39,24 @@ Table 1 \textit{Supplement to figure 3 - results of fitting of log-periodicity i
 \vskip 12pt
 \begin{tabular}{cccccccccc}
 \hline
- & & usc\_18        &           &           & acrim3-1  &           & acrim3-2  &           \\
- & & method 1       & method 2  &           &           &           &           &           \\
+             & usc\_18        &           & acrim3-1  &           & acrim3-2  &           \\
+             & method 1       & method 2  &           &           &           &           \\
 \hline
- plain& dimension   & 0.577973  & 0.579382  & 0.691307  & 0.747027  & 0.598869  & 0.645797  \\
- & correlation      & -0.983925 & -0.969044 & -0.984111 & -0.97212  & -0.974277 & -0.959029 \\
+plain: \\
+dimension     & 0.577973  & 0.579382  & 0.691307  & 0.747027  & 0.598869  & 0.645797  \\
+correlation   & -0.983925 & -0.969044 & -0.984111 & -0.97212  & -0.974277 & -0.959029 \\
 \hline
-fit in full & direction& decc.  & decc.     & accel.    & accel.    & accel.    & accel.    \\
-    & critical time & -711      & -141      & +318      & +474      & +6        & +8        \\
-    & dimension     & 0.686096  & 0.880372  & 0.858975  & 1.07331   & 0.881265  & 0.788433  \\
-    & correlation   & -0.992609 & -0.996231 & -0.998645 & -0.998409 & -0.998075 & -0.979409 \\
+fit in full: \\ 
+direction     & decc.     & decc.     & accel.    & accel.    & accel.    & accel.    \\
+critical time & -711      & -141      & +318      & +474      & +6        & +8        \\
+dimension     & 0.686096  & 0.880372  & 0.858975  & 1.07331   & 0.881265  & 0.788433  \\
+correlation   & -0.992609 & -0.996231 & -0.998645 & -0.998409 & -0.998075 & -0.979409 \\
 \hline
-fit in part & direction & accel. & decc.    & decc.     & accel.    & accel.    & accel.    \\
-    & critical time & +2        & -141      & -474      & +2        & +63       & +3        \\
-    & dimension     & 0.677549  & 0.949008  & 0.822429  & 0.949565  & 0.599305  & 0.974975  \\
-    & correlation   & -0.992127 & 0.996914  & -0.996929 & -0.99992  & -0.995057 & -0.999909 \\
+fit in part: \\
+direction     & accel.    & decc.     & decc.     & accel.    & accel.    & accel.    \\
+critical time & +2        & -141      & -474      & +2        & +63       & +3        \\
+dimension     & 0.677549  & 0.949008  & 0.822429  & 0.949565  & 0.599305  & 0.974975  \\
+correlation   & -0.992127 & 0.996914  & -0.996929 & -0.99992  & -0.995057 & -0.999909 \\
 \hline
 \end{tabular}
 
@@ -72,6 +75,14 @@ Figure 4 \textit{Radiation of Sun in period from November 1978 to September 2017
 \includegraphics[width=0.5\textwidth]{fig_baikal_shortseries.png}\\
 \vskip 12pt
 Figure 5 \textit{Temperature of water in Baikal (A) series from May 2010 to October 2016; (B) series from May 2017 to September 2018. }
+\vskip 12pt
+{\large{\textbf{A}}}\\
+\includegraphics[width=0.5\textwidth]{fig_results_baikal.png}\\
+\vskip 6pt
+{\large{\textbf{B}}}\\
+\includegraphics[width=0.49\textwidth]{fig_results_solar.png}\\
+\vskip 6pt
+Figure 6 \textit{Log-Log dependencies, for the two types of method, in a whole period and in three parts in separate: (A) temperature fn Baikal, right -  2017-2018 period, (B) solar activity, dashed lines in left - testing of updated methods. }
 
 \section*{References}
 
