--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -75,14 +75,14 @@ Figure 4 \textit{Radiation of Sun in period from November 1978 to September 2017
 \includegraphics[width=0.5\textwidth]{fig_baikal_shortseries.png}\\
 \vskip 12pt
 Figure 5 \textit{Temperature of water in Baikal (A) series from May 2010 to October 2016; (B) series from May 2017 to September 2018. }
+
+
 \vskip 12pt
-{\large{\textbf{A}}}\\
-\includegraphics[width=0.5\textwidth]{fig_results_baikal.png}\\
-\vskip 6pt
-{\large{\textbf{B}}}\\
-\includegraphics[width=0.49\textwidth]{fig_results_solar.png}\\
-\vskip 6pt
-Figure 6 \textit{Log-Log dependencies, for the two types of method, in a whole period and in three parts in separate: (A) temperature fn Baikal, right -  2017-2018 period, (B) solar activity, dashed lines in left - testing of updated methods. }
+\includegraphics[width=0.45\textwidth]{fig_results_baikal.png}
+\includegraphics[width=0.45\textwidth]{fig_results_solar.png}\\
+Figure 6 \textit{Log-log dependencies, for the two types of method. A,B: temperature fn Baikal, A - 2010-2016, B - 2017-2018 period, C,D: solar activity, 1978-2017, E,F - fragments of auxiliary records on solar irradiation}
+
+\textit{\small{In A,D, three separate lines are the distributions for beginning, middle and ending parts of a period. Dashed lines in C, for a comparison - path lengths are estimated by the modified approach,  suitable to fitting of log-perodicity. In E,F, - time series are of 15.06.2002 as in fig.2, and of 01.04.2018 as in fig1B, at average and in a few randomly choosed parts. Appropriate fragments from the long-time series, shown in fig 4 and here in C,D, are added for a comparison; numerical labels are estimated least-square slopes of regression lines.}}
 
 \section*{References}
 
