--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -84,6 +84,41 @@ Figure 6 \textit{Log-log dependencies, for the two types of method. A,B: tempera
 
 \textit{\small{In A,D, three separate lines are the distributions for beginning, middle and ending parts of a period. Dashed lines in C, for a comparison - path lengths are estimated by the modified approach,  suitable to fitting of log-perodicity. In E,F, - time series are of 15.06.2002 as in fig.2, and of 01.04.2018 as in fig1B, at average and in a few randomly choosed parts. Appropriate fragments from the long-time series, shown in fig 4 and here in C,D, are added for a comparison; numerical labels are estimated least-square slopes of regression lines.}}
 
+\newpage
+
+\begin{tabular}{cllll}
+\hline
+                               & \textit{method 1}        &             & \textit{method 2}        &             \\
+                               & dimension                & correlation & dimension                & correlation \\
+\hline 
+Solar activity\\
+1-10 t.p.\\
+period 1, at a whole           & 0.600865                 & -0.983845   & 0.597535                 & -0.993015   \\
+period 1, split to 10 parts    & 0.603019 $\pm$ 0.0681101 &             & 0.610272 $\pm$ 0.105999  &             \\
+period 2, at a whole           & 0.580363                 & -0.983685   & 0.597535                 & -0.991654   \\
+period 2, split to 10 parts    & 0.568418 $\pm$ 0.0552829 &             & 0.573676 $\pm$ 0.0685691 &             \\
+period 3, at a whole           & 0.562857                 & -0.983647   & 0.556838                 & -0.991774   \\
+period 3, split to 10 parts    & 0.543297 $\pm$ 0.0622227 &             & 0.544673 $\pm$ 0.0601166 &             \\
+\hline
+Temperature in Baikal\\
+\textit{long series}; 1-10 t.p.\\
+period 1, at a whole           & 0.570939                 & -0.992162   & 0.812175                 & -0.995154   \\
+period 1, split to 10 parts    & 0.613501 $\pm$ 0.126926  &             & 0.868055 $\pm$ 0.177196  &             \\
+period 2, at a whole           & 0.532256                 & -0.991045   & 0.739015                 & -0.994156   \\
+period 2, split to 10 parts    & 0.633994 $\pm$ 0.217527  &             & 0.876311 $\pm$ 0.29755   &             \\
+period 3, at a whole           & 0.303322                 & -0.99865    & 0.385959                 & -0.995293   \\
+period 3, split to 10 parts    & 0.364181 $\pm$ 0.227035  &             & 0.467551 $\pm$ 0.320929  &             \\
+\textit{short series}\\
+1 - 80 t.p., at a whole        & 0.606348                 & -0.995202   & 0.662082                 & -0.988346   \\
+1 - 80 t.p., split to 10 parts & 0.564113 $\pm$ 0.164664  &             & 0.628443 $\pm$ 0.215225  &             \\
+40 - 80 t.p., at a whole       & 0.508056                 & -0.981986   & 0.507846                 & -0.99867   \\
+40 - 80 t.p, split to 10 parts & 0.425593 $\pm$ 0.28323   &             & 0.444415 $\pm$ 0.282211  &             \\
+\hline
+\end{tabular}
+
+
+
+
 \section*{References}
 
 \begin{enumerate}
