--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -86,6 +86,8 @@ Figure 6 \textit{Log-log dependencies, for the two types of method. A,B: tempera
 
 \newpage
 
+Table 2 \textit{}
+
 \begin{tabular}{cllll}
 \hline
                                & \textit{method 1}        &             & \textit{method 2}        &             \\
@@ -116,7 +118,10 @@ period 3, split to 10 parts    & 0.364181 $\pm$ 0.227035  &             & 0.4675
 \hline
 \end{tabular}
 
+\newpage
 
+\includegraphics[width=0.99\textwidth]{fig_results_heatmaps.png}\\
+Figure 7 \textit{Fitting of log-periodicity. accordingly to table 2}
 
 
 \section*{References}
