--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -61,13 +61,11 @@ correlation   & -0.992127 & 0.996914  & -0.996929 & -0.99992  & -0.995057 & -0.9
 \end{tabular}
 
 \newpage
-\section*{Results}
 
 \includegraphics[width=0.92\textwidth]{fig_tsi.png}\\
 \vskip 12pt
 Figure 4 \textit{Radiation of Sun in period from November 1978 to September 2017; in bottom - radiation at MgII frequency. }
-
-\newpage
+\vskip 12pt
 {\large{\textbf{A}}}\\
 \includegraphics[width=0.99\textwidth]{fig_baikal_longseries.png}\\
 \vskip 12pt
@@ -76,17 +74,19 @@ Figure 4 \textit{Radiation of Sun in period from November 1978 to September 2017
 \vskip 12pt
 Figure 5 \textit{Temperature of water in Baikal (A) series from May 2010 to October 2016; (B) series from May 2017 to September 2018. }
 
+\section*{Results}
 
-\vskip 12pt
-\includegraphics[width=0.45\textwidth]{fig_results_baikal.png}
-\includegraphics[width=0.45\textwidth]{fig_results_solar.png}\\
-Figure 6 \textit{Log-log dependencies, for the two types of method. A,B: temperature fn Baikal, A - 2010-2016, B - 2017-2018 period, C,D: solar activity, 1978-2017, E,F - fragments of auxiliary records on solar irradiation}
+\includegraphics[width=0.49\textwidth]{fig_results_baikal.png}
+\includegraphics[width=0.49\textwidth]{fig_results_solar.png}\\
+Figure 6 \textit{Log-log dependencies, for the two types of method. A,B: temperature in Baikal, A - 2010-2016, B - 2017-2018 period, C,D: solar activity, 1978-2017, E,F - fragments of auxiliary records on solar irradiation}
 
 \textit{\small{In A,D, three separate lines are the distributions for beginning, middle and ending parts of a period. Dashed lines in C, for a comparison - path lengths are estimated by the modified approach,  suitable to fitting of log-perodicity. In E,F, - time series are of 15.06.2002 as in fig.2, and of 01.04.2018 as in fig1B, at average and in a few randomly choosed parts. Appropriate fragments from the long-time series, shown in fig 4 and here in C,D, are added for a comparison; numerical labels are estimated least-square slopes of regression lines.}}
 
 \newpage
 
 Table 2 \textit{}
+
+\small{
 
 \begin{tabular}{cllll}
 \hline
@@ -101,12 +101,14 @@ period 2, at a whole           & 0.580363                 & -0.983685   & 0.5975
 period 2, split to 10 parts    & 0.568418 $\pm$ 0.0552829 &             & 0.573676 $\pm$ 0.0685691 &             \\
 period 3, at a whole           & 0.562857                 & -0.983647   & 0.556838                 & -0.991774   \\
 period 3, split to 10 parts    & 0.543297 $\pm$ 0.0622227 &             & 0.544673 $\pm$ 0.0601166 &             \\
-\textit{Mn line}, 1-10 t.p.\\
-at a whole                     & 0.349931                 & -0.975307   & 0.439804                 & -0.942881   \\
-split to 10 parts              & 0.345247 $\pm$ 0.102797  &             & 0.35548 $\pm$ 0.195736   &             \\
+\textit{MnII intensity},\\
+1...10 t.p., at a whole        & 0.349931                 & -0.975307   & 0.439804                 & -0.942881   \\
+1...10 t.p, split to 10 parts  & 0.345247 $\pm$ 0.102797  &             & 0.35548 $\pm$ 0.195736   &             \\
+1...max t.p., at a whole       & 0.531589                 & -0.960948   & 0.560595                 & -0.930574   \\
+1...max t.p, split to 10 parts & 0.679449 $\pm$ 0.0622246 &             & 0.774685 $\pm$ 0.109925  &             \\
 \hline
 Temperature in Baikal\\
-\textit{long series}; 1-10 t.p.\\
+\textit{long series}; 1...10 t.p.\\
 period 1, at a whole           & 0.570939                 & -0.992162   & 0.812175                 & -0.995154   \\
 period 1, split to 10 parts    & 0.613501 $\pm$ 0.126926  &             & 0.868055 $\pm$ 0.177196  &             \\
 period 2, at a whole           & 0.532256                 & -0.991045   & 0.739015                 & -0.994156   \\
@@ -114,23 +116,38 @@ period 2, split to 10 parts    & 0.633994 $\pm$ 0.217527  &             & 0.8763
 period 3, at a whole           & 0.303322                 & -0.99865    & 0.385959                 & -0.995293   \\
 period 3, split to 10 parts    & 0.364181 $\pm$ 0.227035  &             & 0.467551 $\pm$ 0.320929  &             \\
 \textit{short series}\\
-1 - 80 t.p., at a whole        & 0.606348                 & -0.995202   & 0.662082                 & -0.988346   \\
-1 - 80 t.p., split to 10 parts & 0.564113 $\pm$ 0.164664  &             & 0.628443 $\pm$ 0.215225  &             \\
-40 - 80 t.p., at a whole       & 0.508056                 & -0.981986   & 0.507846                 & -0.99867   \\
-40 - 80 t.p, split to 10 parts & 0.425593 $\pm$ 0.28323   &             & 0.444415 $\pm$ 0.282211  &             \\
+1...80 t.p., at a whole        & 0.606348                 & -0.995202   & 0.662082                 & -0.988346   \\
+1...80 t.p., split to 10 parts & 0.564113 $\pm$ 0.164664  &             & 0.628443 $\pm$ 0.215225  &             \\
+40...80 t.p., at a whole       & 0.508056                 & -0.981986   & 0.507846                 & -0.99867   \\
+40...80 t.p, split to 10 parts & 0.425593 $\pm$ 0.28323   &             & 0.444415 $\pm$ 0.282211  &             \\
 \hline
 \end{tabular}
+}
 
-\newpage
+\vskip 12pt
 
-\includegraphics[width=0.7\textwidth]{fig_heatmaps_explained.png}\\
+\includegraphics[width=0.99\textwidth]{fig_heatmaps_explained.png}\\
 Figure 7 \textit{Fitting of log-periodicity. Explanation.}
 
 \newpage
+
 \includegraphics[width=0.99\textwidth]{fig_heatmaps_baikal.png}\\
+
 \includegraphics[width=0.99\textwidth]{fig_heatmaps_solar.png}\\
 Figure 8 \textit{Fitting of log-periodicity. Accordingly to table 2.}
 
+\newpage
+
+\section*{Conclusions}
+
+The crisis on Baikal which began at around 2014 was possible to detect by slightly unusual variations of water temperature in two to four years before (fig 9 A). 
+
+If a covid-19 is not an ordinary virus pandemy, to what extent is this extraaordiunarity expanded? The exclusive search gave similarity of ''projection'' to a model of log-periodic acceleration between variations of temperature in Baikal before crisis, and variations of intensity of solar irradiation in past 30 years (fig. 9B), this can point out to expectations of universe-scale crisis in a near future.
+
+\vskip 12pt
+
+\includegraphics[width=0.85\textwidth]{fig_conclusions.png}\\
+Figure 9 \textit{Concluding drawing.}
 
 \section*{References}
 
@@ -161,5 +178,8 @@ Figure 8 \textit{Fitting of log-periodicity. Accordingly to table 2.}
 %cat ../data_files/baikal_shortseries.txt |   awk -F ',' '{ print ($1-1496172600)*0.000001 "," $2 }'
 
 %for cmd in './fractal_dimension -lh -v -max 10 -linincr' './fractal_dimension -lh -v -max 1000' './fractal_dimension -lh -v'; do echo "["; cat ../data_files/lin_tsi.txt | bash -c "$cmd" | head -n 38 | tail -n 36; echo "],"; done;
+
+%head -n 525252 ../data_files/baikal_longseries.txt |  awk -F "," '{ print (1367352120-$1)*0.000001*(log(2+(1367352120-$1)/(86400*365))/(log(4)-log(2))) "," $2 }' | ./fractal_dimension -hm -v -xy
+%cat ../data_files/lin_mn.txt | awk -F "," '{ for ( i=1; i <= NF; i+= 2 ) { print (365*(36-$i/365)*log(36-$i/365)/log(10)) "," $(i+1); } }' | ./fractal_dimension -hm -v -xy
 
 \end{document}
