--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -95,12 +95,12 @@ Table 2 \textit{}
 \hline 
 Solar activity,\\
 \textit{total}, 1-10 t.p.\\
-period 1, at a whole           & 0.600865                 & -0.983845   & 0.597535                 & -0.993015   \\
-period 1, split to 10 parts    & 0.603019 $\pm$ 0.0681101 &             & 0.610272 $\pm$ 0.105999  &             \\
-period 2, at a whole           & 0.580363                 & -0.983685   & 0.597535                 & -0.991654   \\
-period 2, split to 10 parts    & 0.568418 $\pm$ 0.0552829 &             & 0.573676 $\pm$ 0.0685691 &             \\
-period 3, at a whole           & 0.562857                 & -0.983647   & 0.556838                 & -0.991774   \\
-period 3, split to 10 parts    & 0.543297 $\pm$ 0.0622227 &             & 0.544673 $\pm$ 0.0601166 &             \\
+period 1, at a whole           & 0.611359                 & -0.98176    & -0.98176                 & -0.992606   \\
+period 1, split to 10 parts    & 0.620717 $\pm$ 0.0686381 &             & 0.633088 $\pm$ 0.117143  &             \\
+period 2, at a whole           & 0.582742                 & -0.980571   & 0.56841                  & -0.987462   \\
+period 2, split to 10 parts    & 0.577533 $\pm$ 0.0646417 &             & 0.57153  $\pm$ 0.0621609 &             \\
+period 3, at a whole           & 0.529598                 & -0.98341    & 0.940431                 & -0.961894   \\
+period 3, split to 10 parts    & 0.543816 $\pm$ 0.117594  &             & 0.674605 $\pm$ 0.273296  &             \\
 \textit{MnII intensity},\\
 1...10 t.p., at a whole        & 0.349931                 & -0.975307   & 0.439804                 & -0.942881   \\
 1...10 t.p, split to 10 parts  & 0.345247 $\pm$ 0.102797  &             & 0.35548 $\pm$ 0.195736   &             \\
@@ -169,9 +169,6 @@ Figure 9 \textit{Concluding drawing.}
 
 %echo "$s_beg" >../figure_sources/fig_baikal_shortseries.html;cat ../data_files/baikal_shortseries.txt | while read line; do a1=${line:0:10};a2=${line:11:5};n1=`echo "($a1-$d_beg)*0.00001" | bc`;n2=`echo "$a2*10" | bc`; s="+\" $n1,$n2\""; echo "$s" >>../figure_sources/fig_baikal_shortseries.html; done; echo "$s_end" >>../figure_sources/fig_baikal_shortseries.html;
 
-%head -c 29996 ../data_files/lin_tsi.txt 
-%head -c 60998 ../data_files/lin_tsi.txt | tail -n 31002
-%tail -n 31795 ../data_files/lin_tsi.txt
 %head -n 525252 ../data_files/baikal_longseries.txt |   awk -F ',' '{ print ($1-1262293200)*0.000001 "," $2 }'
 %head -n 1222863 ../data_files/baikal_longseries.txt | tail -n $((1222863-718437))  |  awk -F ',' '{ print ($1-1367352120)*0.000001 "," $2 }'
 %tail -n $((1575756-1222863)) ../data_files/baikal_longseries.txt |  awk -F ',' '{ print ($1-1430427720)*0.000001 "," $2 }'
