--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -10,9 +10,12 @@
 
 \section*{Introduction}
 
+\noindent
 {\large{\textbf{A}}}\\
 \includegraphics[width=0.4\textwidth]{fig_intro_usc18.png}\\
 \vskip 12pt
+
+\noindent
 {\large{\textbf{B}}}\\
 \includegraphics[width=0.6\textwidth]{fig_intro_acrim3.png}\\
 \vskip 12pt
@@ -26,9 +29,12 @@ Figure 2 \textit{Snapshot from video record of sun flaming 15.06.2002, deposited
 \newpage
 \section*{Methods}
 
+\subsection*{Fitting of log-periodicity}
+
 {\large{\textbf{A}}}\\
 \includegraphics[width=0.99\textwidth]{fig_methods_usc18.png}\\
 \vskip 12pt
+
 {\large{\textbf{B}}}\\
 \includegraphics[width=0.99\textwidth]{fig_methods_acrim3.png}\\
 \vskip 12pt
@@ -62,6 +68,8 @@ correlation   & -0.992127 & 0.996914  & -0.996929 & -0.99992  & -0.995057 & -0.9
 
 \newpage
 
+\subsection*{Input measurements}
+
 \includegraphics[width=0.92\textwidth]{fig_tsi.png}\\
 \vskip 12pt
 Figure 4 \textit{Radiation of Sun in period from November 1978 to September 2017; in bottom - radiation at MgII frequency. }
@@ -81,6 +89,8 @@ Figure 5 \textit{Temperature of water in Baikal (A) series from May 2010 to Octo
 Figure 6 \textit{Log-log dependencies, for the two types of method. A,B: temperature in Baikal, A - 2010-2016, B - 2017-2018 period, C,D: solar activity, 1978-2017, E,F - fragments of auxiliary records on solar irradiation}
 
 \textit{\small{In A,D, three separate lines are the distributions for beginning, middle and ending parts of a period. Dashed lines in C, for a comparison - path lengths are estimated by the modified approach,  suitable to fitting of log-perodicity. In E,F, - time series are of 15.06.2002 as in fig.2, and of 01.04.2018 as in fig1B, at average and in a few randomly choosed parts. Appropriate fragments from the long-time series, shown in fig 4 and here in C,D, are added for a comparison; numerical labels are estimated least-square slopes of regression lines.}}
+
+That is, the measure of fractal dimension is consistent for mulitiple data sources. And, the interval $s < 10$ is most sensitive (in fig 6A) to a change of time period.
 
 \newpage
 
@@ -136,6 +146,8 @@ Figure 7 \textit{Fitting of log-periodicity. Explanation.}
 \includegraphics[width=0.99\textwidth]{fig_heatmaps_solar.png}\\
 Figure 8 \textit{Fitting of log-periodicity. Accordingly to table 2.}
 
+That is, for data in fig 8A, a trend to contraction to up-going crisis is observed in the first row. The same trend can be seen in fig 8D for solar activity. 
+
 \newpage
 
 \section*{Conclusions}
@@ -146,7 +158,7 @@ If a covid-19 is not an ordinary virus pandemy, to what extent is this extraaord
 
 \vskip 12pt
 
-\includegraphics[width=0.85\textwidth]{fig_conclusions.png}\\
+\includegraphics[width=0.7\textwidth]{fig_conclusions.png}\\
 Figure 9 \textit{Concluding drawing.}
 
 \section*{References}
