--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -4,45 +4,146 @@
 \begin{document}
 
 \begin{center}
-{\Large{}}
+{\large{Features of Log-periodic Acceleration in Fluctuations of Sun Irradiation.}}
 \vskip 12pt
 \end{center}
 
-\section*{Introduction}
+Sergey Feranchuk, Smolensk State University, feranchuk@gmail.com
 
-\noindent
-{\large{\textbf{A}}}\\
-\includegraphics[width=0.4\textwidth]{fig_intro_usc18.png}\\
-\vskip 12pt
+\section*{Abstract}
 
-\noindent
-{\large{\textbf{B}}}\\
-\includegraphics[width=0.6\textwidth]{fig_intro_acrim3.png}\\
-\vskip 12pt
-Figure 1 \textit{(A) Extracts form satellite data records of photon flux deposited in Univ. of South Carolina site, radiation of Sun in 2018; (B) Radiation of Sun from 2000 to 2013 recorded by ''ACRIM3'' satellite.}
+\textit{Background.} Level of Sun irradiation continously changes at any scale of time; some features of self-affinity are anyway expected there. ''Ideal'' self-affinity imply a presence of a linear dependence between a scale of fluctuations and a scale of time; a slope of that line is a value of ''fractal dimension''. The ''scale-vs.-scale'' distributions for the fluctuations of Sun irradiation are not linear, a slope of the fitting line depends on time and a diapason of scales. 
+
+Chaotic processes like the burning of Sun are anyway characterized, also, by a presence of some slow-scale oscillations and sudden outbreaks. A property of log-periodicity is another side of ''fractal''-like distributions, it can be applied to describe these oscillations, and it imply either inceasing or decreasing of their periodicity. Increased periodicity of chaotic outbreaks can warn about the approaching ''crash'', a ''phase transition'', a loss of any stability in an observed ''world''.
+
+\textit{Methods.}  A presence of log-periodic oscillations would influence a scale of time, and relative positions of sequential measurements along the axis of time.
+A scale distributions of Sun irradiation were compared for a couple of data sources, a presence of log-periodicity was approached trying to guess a best fit of the linear dependency for data points with modified time-axis positions. The approach was comparatively applied to fluctuations of water temperature in Baikal, were a crisis happened in around 2014. 
+
+\textit{Results.} In early period before the crisis in Baikal, between 2010 and 2012, the scale diastribution for water temperature within a range from hours to several days looks different than in later another periods, and the attempts to apply the law of log-periodicity to this distribution appear to be ... . The same ... for the fluctuations of MgII Sun irradiation between 1978 and 2004.
+
+\textit{Conclusion}
 
 \newpage
-\includegraphics[width=0.9\textwidth]{fig_sun_video.png}\\
+\section*{Introduction}
+
+The burning of Sun attracts attention of many physicists, and modern techniques of measurements are able to supply experimental data of various types. From the variety of approaches, two time series of measurements are shown in figure 1. Long-time observations are able to detect a presence of ''solar cycles'', regular changes of the burning intensity, 14-years cycle contributed the most to the variations of the intensity, as it can be seen in fig 1A. In the periods of instability, the burning of Sun is more ...
+
+\noindent
+{\large{\textbf{A}}} \hskip 0.57\textwidth {\large{\textbf{B}}}\\
+\includegraphics[width=0.59\textwidth]{fig_intro_acrim3.png}
+\includegraphics[width=0.39\textwidth]{fig_intro_usc18.png}\\
 \vskip 12pt
-Figure 2 \textit{Snapshot from video record of sun flaming 15.06.2002, deposited by Swedish physicists. Digits in column - Higuchi fractal dimension for spatial axis, digits in row - approximation of fractal dimension for time axis. }
+\noindent
+{\large{\textbf{C}}}\\
+\includegraphics[width=0.75\textwidth]{fig_intro_kva2002.png}\\
+\vskip 12pt
+Figure 1 \textit{(A) Radiation of Sun from 2000 to 2013 recorded by ''ACRIM3'' satellite; (B) Extracts form satellite data records of photon flux deposited in Univ. of South Carolina site, radiation of Sun in 2018; (C) Snapshot from video record of sun flaming 15.06.2002, deposited by Swedish physicists.\\ \small{in C,  digits in column - Higuchi fractal dimension for spatial axis, digits in row - approximation of fractal dimension for time axis.}}
+
+The two approches are ... to measure the scale of fluctuations depending on a scale of time; first is known as ''Higuchi'' dimension [1], second was proposed by Peng et al [2] ...
+
+The generic linkage between ''fractal'' properties and a presence of log-periodicity was observed and described ... in part in theory, in part in some applied cases... [3].
+
+''Naive'' ways to observe some log-periodicity ... can point at most to an expected periodic ''burst'' ... some is demonstrated above in fig 1C.
+%\newpage
+%\vskip 12pt
+%Figure 2 \textit{ }
 
 \newpage
 \section*{Methods}
 
-\subsection*{Fitting of log-periodicity}
+\textit{Fitting of log-periodicity}
 
+\noindent
 {\large{\textbf{A}}}\\
-\includegraphics[width=0.99\textwidth]{fig_methods_usc18.png}\\
+\includegraphics[width=0.8\textwidth]{fig_methods_usc18.png}\\
 \vskip 12pt
-
+\noindent
 {\large{\textbf{B}}}\\
-\includegraphics[width=0.99\textwidth]{fig_methods_acrim3.png}\\
+\includegraphics[width=0.8\textwidth]{fig_methods_acrim3.png}\\
 \vskip 12pt
-Figure 3 \textit{Illustrations of attempts to guess a presence of the log-periodic dependency (A) Uniform distribution - chart in fig. 1A (B) Periodic bursts - chart in fig 1B, two talils in separate.}
+Figure 2 \textit{Illustrations of attempts to guess a presence of the log-periodic dependency (A) Uniform distribution - chart in fig. 1A (B) Periodic systematic bias - chart in fig 1B, two tails in separate.}
 \vskip 12pt
 
-Table 1 \textit{Supplement to figure 3 - results of fitting of log-periodicity in log-log distributions}
+
+\newpage
+
+\textit{Input measurements}
+
+\noindent
+\includegraphics[width=0.8\textwidth]{fig_lindata.png}\\
 \vskip 12pt
+Figure 3 \textit{(A) Total solar irradiation, November 1978 - September 2017; (B) MgII irradiation, November 1978 - November 2004.}
+\vskip 12pt
+\noindent
+\includegraphics[width=0.99\textwidth]{fig_baikal_longseries.png}\\
+\vskip 12pt
+\noindent
+\includegraphics[width=0.26\textwidth]{fig_baikal_shortseries.png}\\
+\vskip 12pt
+Figure 4 \textit{Temperature of water in Baikal, (A) - series from May 2010 to October 2016, (B) - series from May 2017 to September 2018.}
+
+\section*{Results}
+
+\includegraphics[width=0.49\textwidth]{fig_results_baikal.png}
+\includegraphics[width=0.49\textwidth]{fig_results_solar.png}\\
+Figure 5 \textit{Log-log dependencies, for the two types of method. A,B: temperature in Baikal, A - 2010-2016, B - 2017-2018 period, C,D: solar activity, 1978-2017, E,F - fragments of auxiliary records on solar irradiation}
+
+\textit{\small{In A,D, three separate lines are the distributions for beginning, middle and ending parts of a period. Dashed lines in C, for a comparison - path lengths are estimated by the modified approach,  suitable to fitting of log-perodicity. In E,F, - time series are of 15.06.2002 as in fig.2, and of 01.04.2018 as in fig1B, at average and in a few randomly choosed parts. Appropriate fragments from the long-time series, shown in fig 4 and here in C,D, are added for a comparison; numerical labels are estimated least-square slopes of regression lines.}}
+
+That is, the measure of fractal dimension is consistent for mulitiple data sources. And, the interval $s < 10$ is most sensitive (in fig 5A) to a change of time period.
+
+\newpage
+
+
+\vskip 12pt
+
+\includegraphics[width=0.99\textwidth]{fig_heatmaps_explained.png}\\
+Figure 6 \textit{Fitting of log-periodicity. Explanation.}
+
+\newpage
+
+\includegraphics[width=0.99\textwidth]{fig_heatmaps_baikal.png}\\
+
+\includegraphics[width=0.99\textwidth]{fig_heatmaps_solar.png}\\
+Figure 7 \textit{Fitting of log-periodicity in separated time periods. Parameters are systematicale listed in table 2.}
+
+That is, for data in fig 7A, a trend to contraction to up-going crisis is observed in the first row. The same trend can be seen in fig 7D for solar activity. 
+
+\newpage
+
+\section*{Conclusions}
+
+The crisis on Baikal which began at around 2014 was possible to detect by slightly unusual variations of water temperature in two to four years before (fig 8 A). 
+
+If a covid-19 is not an ordinary virus pandemy, to what extent is this extraaordiunarity expanded? The exclusive search gave similarity of ''projection'' to a model of log-periodic acceleration between variations of temperature in Baikal before crisis, and variations of intensity of solar irradiation in past 30 years (fig. 8 B), this can point out to expectations of universe-scale crisis in a near future.
+
+\vskip 12pt
+
+\includegraphics[width=0.7\textwidth]{fig_conclusions.png}\\
+Figure 8 \textit{Concluding drawing.}
+
+\section*{References}
+
+\begin{enumerate}
+
+\item Higuchi, \textit{Phys.Rev}, 19..
+
+\item Peng C.-K., et al., Mosaic organization of DNA nucleotides, \textit{Phys.Rev.}, 1994.
+
+\item Nottale, L., Scale relativity and fractal space-time: theory and applications, \textit{arxiv.org}, 2008
+
+\item Feranchuk, S., Belkova, N., et al. \textit{Limnology and Freshwater Biology}, 2018,
+
+\end{enumerate}
+
+\newpage
+\section*{Appendix A}
+
+Table 1 \textit{Supplement to figure 2 - results of fitting of log-periodicity in log-log distributions}
+\vskip 12pt
+
+{\small{
+
 \begin{tabular}{cccccccccc}
 \hline
              & usc\_18        &           & acrim3-1  &           & acrim3-2  &           \\
@@ -66,33 +167,8 @@ correlation   & -0.992127 & 0.996914  & -0.996929 & -0.99992  & -0.995057 & -0.9
 \hline
 \end{tabular}
 
-\newpage
+}}
 
-\subsection*{Input measurements}
-
-\includegraphics[width=0.92\textwidth]{fig_tsi.png}\\
-\vskip 12pt
-Figure 4 \textit{Radiation of Sun in period from November 1978 to September 2017; in bottom - radiation at MgII frequency. }
-\vskip 12pt
-{\large{\textbf{A}}}\\
-\includegraphics[width=0.99\textwidth]{fig_baikal_longseries.png}\\
-\vskip 12pt
-{\large{\textbf{B}}}\\
-\includegraphics[width=0.5\textwidth]{fig_baikal_shortseries.png}\\
-\vskip 12pt
-Figure 5 \textit{Temperature of water in Baikal (A) series from May 2010 to October 2016; (B) series from May 2017 to September 2018. }
-
-\section*{Results}
-
-\includegraphics[width=0.49\textwidth]{fig_results_baikal.png}
-\includegraphics[width=0.49\textwidth]{fig_results_solar.png}\\
-Figure 6 \textit{Log-log dependencies, for the two types of method. A,B: temperature in Baikal, A - 2010-2016, B - 2017-2018 period, C,D: solar activity, 1978-2017, E,F - fragments of auxiliary records on solar irradiation}
-
-\textit{\small{In A,D, three separate lines are the distributions for beginning, middle and ending parts of a period. Dashed lines in C, for a comparison - path lengths are estimated by the modified approach,  suitable to fitting of log-perodicity. In E,F, - time series are of 15.06.2002 as in fig.2, and of 01.04.2018 as in fig1B, at average and in a few randomly choosed parts. Appropriate fragments from the long-time series, shown in fig 4 and here in C,D, are added for a comparison; numerical labels are estimated least-square slopes of regression lines.}}
-
-That is, the measure of fractal dimension is consistent for mulitiple data sources. And, the interval $s < 10$ is most sensitive (in fig 6A) to a change of time period.
-
-\newpage
 
 Table 2 \textit{}
 
@@ -134,45 +210,9 @@ period 3, split to 10 parts    & 0.364181 $\pm$ 0.227035  &             & 0.4675
 \end{tabular}
 }
 
-\vskip 12pt
-
-\includegraphics[width=0.99\textwidth]{fig_heatmaps_explained.png}\\
-Figure 7 \textit{Fitting of log-periodicity. Explanation.}
 
 \newpage
-
-\includegraphics[width=0.99\textwidth]{fig_heatmaps_baikal.png}\\
-
-\includegraphics[width=0.99\textwidth]{fig_heatmaps_solar.png}\\
-Figure 8 \textit{Fitting of log-periodicity. Accordingly to table 2.}
-
-That is, for data in fig 8A, a trend to contraction to up-going crisis is observed in the first row. The same trend can be seen in fig 8D for solar activity. 
-
-\newpage
-
-\section*{Conclusions}
-
-The crisis on Baikal which began at around 2014 was possible to detect by slightly unusual variations of water temperature in two to four years before (fig 9 A). 
-
-If a covid-19 is not an ordinary virus pandemy, to what extent is this extraaordiunarity expanded? The exclusive search gave similarity of ''projection'' to a model of log-periodic acceleration between variations of temperature in Baikal before crisis, and variations of intensity of solar irradiation in past 30 years (fig. 9B), this can point out to expectations of universe-scale crisis in a near future.
-
-\vskip 12pt
-
-\includegraphics[width=0.7\textwidth]{fig_conclusions.png}\\
-Figure 9 \textit{Concluding drawing.}
-
-\section*{References}
-
-\begin{enumerate}
-
-\item Nottale, L., Scale relativity and fractal space-time: theory and applications, \textit{arxiv.org}, 2008
-
-\item Feranchuk, S., Belkova, N., et al. \textit{Limnology and Freshwater Biology}, 2018,
-
-\end{enumerate}
-
-\newpage
-\section*{Appendix A}
+\section*{Appendix B}
 
 
 \texttt{\small{ cat usc\_18.txt | awk -v i=0 -v b1=2458119.5 -v b13=7 '\{ if ( i == 100 \&\& substr( \$13, 1, 1 ) != "0" ) \{ s = s "," 10 * ( \$1 - b1 ) "," 500 * (substr(\$13,1,7) - b13 ); i = 0; \}; i = i+1; \} END \{ print substr( s, 2 ) \}' | ./fractal\_dimension -d\_xy }}
